|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.6
- Upgraded bundled Sqlite3 to version 3.7.4. (Ilia)
- Upgraded bundled PCRE to version 8.11. (Ilia)

- Zend Engine:
  . Indirect reference to $this fails to resolve if direct $this is never used
    in method. (Scott)
  . Fixed Bug #53629 (memory leak inside highlight_string()). (Hannes, Ilia)

- Core:
  . Fixed bug #48484 (array_product() always returns 0 for an empty array).
    (Ilia)
  . Fixed bug #48607 (fwrite() doesn't check reply from ftp server before
    exiting). (Ilia)
  . Fixed bug #53682 (Fix compile on the VAX). (Rasmus, jklos)

- Calendar extension:
  . Fixed bug #53574 (Integer overflow in SdnToJulian, sometimes leading to
    segfault). (Gustavo)
  
- DateTime extension:
  . Fixed a bug in DateTime->modify() where absolute date/time statements had
    no effect. (Derick)
  . Fixed bug #53729 (DatePeriod fails to initialize recurrences on 64bit
    big-endian systems). (Derick, rein@basefarm.no)

- Filter extension:
  . Fixed bug #53150 (FILTER_FLAG_NO_RES_RANGE is missing some IP ranges).
    (Ilia)
  . Fixed bug #52209 (INPUT_ENV returns NULL for set variables (CLI)). (Ilia)
  . Fixed bug #47435 (FILTER_FLAG_NO_RES_RANGE don't work with ipv6).
    (Ilia, valli at icsurselva dot ch)

- IMAP extension:
  . Fixed bug #53377 (imap_mime_header_decode() doesn't ignore \t during long
    MIME header unfolding). (Adam)
    
- Intl extension:
  . Fixed bug #53512 (NumberFormatter::setSymbol crash on bogus $attr values).
    (Felipe)
  . Fixed bug #53612 (Segmentation fault when using cloned several intl
    objects). (Gustavo)
  . Implemented clone functionality for number, date & message formatters. 
    (Stas).

- MySQL Improved extension:
  . Fixed bug #53503 (mysqli::query returns false after successful LOAD DATA 
    query). (Kalle, Andrey)
  . Fixed bug #53425 (mysqli_real_connect() ignores client flags when built to 